# knifebot

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: main.yml
knifebot/: bot.py  helpers.py  persistence.py  settings.py
knifebot/modules/: __init__.py  ping.py
src/: main.rs
src/commands/: mod.rs  ping.rs
